--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <h1 class="text-center my-3 display-1">VOLEIBOL</h1>
                         <h2 class="text-center mb-4">El deporte detrás del reconocido abrazo de celebración.</h2>
                         <p class="lead">El voleibol es un deporte en el que dos equipos se enfrentan utilizando una pelota. Cuenta con 6 jugadores por lado, en un área de juego separada por una red en el centro. Su objetivo es enviar el balón por el aire al otro lado de la cancha, intentando que caiga al suelo rival, para lograr un punto.</p>
-                        <p>Cuando es logra el punto es el momento en que surge el abrazo grupal, como símbolo de unión y victoria, que ha llevado a reconocer este deporte.</p>
+                        <p>Cuando es logrado el punto es cuando surge el abrazo grupal, como símbolo de unión y victoria, que ha llevado a reconocer este deporte.</p>
                     </div>
                 </div>
             </div>
