--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="col-11 col-sm-10 mx-auto">
                             <p>Los <span class="bg-danger text-white px-1 rounded">círculos rojos</span> establecen las 6 posiciones en las que rotan los 6 jugadores en cada lado de la cancha. La <span class="bg-secondary text-white px-1 rounded">flecha gris</span> simboliza el sentido de la rotación. Los jugadores que se encuentran frente a la red son los que realizan los golpes de bloqueo, y pueden "armar" para que un jugador de posición 1, 2 o 3 genere un golpe de remate.</p>
                             <p>La cancha, que tiene 18 metros de largo y 9 metros de ancho, es dividida en dos parte iguales por el largo con una red de 2,1 metros de altura, con 1 metro de ancho y 9 metros de largo.</p>
-                            <p>En las canchas que se encuentren en el interior de recintos deportivos la superficie de juego debe ser de color uniforme, claro y brillante, y en competiciones internacionales los colores de las líneas, la cancha y la zona libre tienen que ser diferentes.</p>
+                            <p>En las canchas que se encuentran en el interior de recintos deportivos, la superficie de juego debe ser de color uniforme, claro y brillante, y en competiciones internacionales los colores de las líneas, la cancha y la zona libre deben ser diferentes.</p>
                         </div>
                     </div>
                 </div>
