--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="row row-cols-1 row-cols-md-2 g-3">
                             <div class="col">
                                 <img src="img/golpe-1.jpg" class="w-100" />
-                                <p class="small"><em>Golpe "dedos"</em>: Las manos se colocan paralelas, generando un triángulo con los dedos indices y pulgares, y la pelota es recibida con las yemas de los dedos, generando flexión de brazos para agregar fuerza al golpe.</p>
+                                <p class="small"><em>Golpe "dedos"</em>: Las manos se colocan paralelas, generando un triángulo con los dedos índices y pulgares, y la pelota es recibida con las yemas de los dedos, generando flexión de brazos para agregar fuerza al golpe.</p>
                             </div>
                             <div class="col">
                                 <img src="img/golpe-2.jpg" class="w-100" />
