--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </figure>
                     <figure class="col-12 col-sm-11 mx-auto my-3">
                         <img src="img/saque-2.jpg" class="w-100" />
-                        <figcaption class="mx-3">Saque por arriba: Es un saque a nivel profesional, la pelota se eleva por sobre la cabeza, se realiza un salto y se golpea en el punto más alto con la palma abierta.</figcaption>
+                        <figcaption class="mx-3"><em>Saque por arriba</em>:Es un saque a nivel profesional, la pelota se eleva por sobre la cabeza, se realiza un salto y se golpea en el punto más alto con la palma abierta.</figcaption>
                     </figure>
                 </div>
             </article>
