--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="col-sm-6"><object data="img/pais-medallas.svg" type="image/svg+xml" class="w-100"></object></div>
                 </div>
                 <div class="row my-3">
-                    <div class="col-sm-6"><img src="img/usa-bandera.png" class="w-100" /></div>
+                    <div class="col-sm-6"><object data="img/medallas.svg" type="image/svg+xml" class="w-100"></object></div>
                     <div class="col-sm-6"><object data="img/usa-medallas.svg" type="image/svg+xml" class="w-100"></object></div>
                 </div>
                 <div class="row my-3">
