--- a/index.html
+++ b/index.html
@@ -117,16 +117,10 @@
                     </div>
                 </div>
                 <div class="row my-3">
-                    <div class="col-sm-6"><object data="img/cuba-bandera.svg" type="image/svg+xml" class="w-100"></object></div>
-                    <div class="col-sm-6"><object data="img/cuba-medallas.svg" type="image/svg+xml" class="w-100"></object></div>
-                </div>
-                <div class="row my-3">
-                    <div class="col-sm-6"><object data="img/pais-bandera.svg" type="image/svg+xml" class="w-100"></object></div>
-                    <div class="col-sm-6"><object data="img/pais-medallas.svg" type="image/svg+xml" class="w-100"></object></div>
+                    <div class="col-sm-6"><object data="img/simbologia.svg" type="image/svg+xml" class="w-100"></object></div>
                 </div>
                 <div class="row my-3">
                     <div class="col-sm-6"><object data="img/medallas.svg" type="image/svg+xml" class="w-100"></object></div>
-                    <div class="col-sm-6"><object data="img/usa-medallas.svg" type="image/svg+xml" class="w-100"></object></div>
                 </div>
                 <div class="row my-3">
                     <div class="col-11 col-sm-10 mx-auto">
