--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                         <h4 class="text-center mt-5 mb-3">Países americanos destacados</h4>
                     </div>
                 </div>
-                <div class="row my-3">
+                <div class="row">
                     <div class="col-sm-6"><object data="img/simbologia.svg" type="image/svg+xml" class="w-100"></object></div>
                 </div>
-                <div class="row my-3">
+                <div class="row">
                     <div class="col-sm-6"><object data="img/medallas.svg" type="image/svg+xml" class="w-100"></object></div>
                 </div>
                 <div class="row my-3">
