--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="row">
                     <div class="col-sm-6"><object data="img/medallas.svg" type="image/svg+xml" class="w-100"></object></div>
                 </div>
-                <div class="row my-3">
+                <div class="row">
                     <div class="col-11 col-sm-10 mx-auto">
                         <p>Los tres medalleros históricos están actualizados hasta Lima 2019, año donde Argentina gana la medalla de oro, estableciendose como el 4to mejor país del mundo, y el podio continúan obteniendo Brasil, Cuba y Estados Unidos, gracias a la cantidad de medallas acumuladas a la fecha.</p>
                     </div>
