--- a/index.html
+++ b/index.html
@@ -113,15 +113,14 @@
             <article class="container">
                 <div class="row">
                     <div class="col-11 col-sm-10 mx-auto">
-                        <h4 class="text-center mt-5 mb-3">Países americanos destacados</h4>
+                        <h4 class="text-center mt-4 mb-3">PAISES AMERICANOS DESTACADOS</h4>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6"><object data="img/simbologia.svg" type="image/svg+xml" class="w-100"></object></div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6"><object data="img/medallas.svg" type="image/svg+xml" class="w-100"></object></div>
-                </div>
+                    <figure class="col-12 col-sm-11 mx-auto my-3">
+                         <object data="img/simbologia.svg" type="image/svg+xml" class="d-none d-md-block w-100"></object>
+                    </figure>
+                    <figure class="col-12 col-sm-11 mx-auto my-3">
+                        <object data="img/medallas.svg" type="image/svg+xml" class="d-none d-md-block w-100"></object>
+                    </figure>
                 <div class="row">
                     <div class="col-11 col-sm-10 mx-auto">
                         <p>Los tres medalleros históricos están actualizados hasta Lima 2019, año donde Argentina gana la medalla de oro, estableciendose como el 4to mejor país del mundo, y el podio continúan obteniendo Brasil, Cuba y Estados Unidos, gracias a la cantidad de medallas acumuladas a la fecha.</p>
