--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <article class="container" id="saques">
                 <div class="row">
                     <div class="col-11 col-sm-10 mx-auto">
-                        <h4 class="text-center mt-4 mb-3">EL SAQUE</h4>
+                        <h4 class="text-center mt-4 mb-3">EL SAQUE: DOS TIPOS</h4>
                         <p>Ambos se realizan desde cualquier posición al final de la cancha, por detrás de la línea de fondo, e indican el momento de partida de la jugada. Cuando se realiza un punto, saca el equipo que haya obtenido la victoria y en el caso de conseguir más de un punto, continúa sacando el mismo jugador, hasta que su equipo reciba un punto en contra. </p>
                     </div>
                     <figure class="col-12 col-sm-11 mx-auto my-3">
