--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <p>Ambos se realizan desde cualquier posición al final de la cancha, por detrás de la línea de fondo, e indican el momento de partida de la jugada. Cuando se realiza un punto, saca el equipo que haya obtenido la victoria y en el caso de conseguir más de un punto, continúa sacando el mismo jugador, hasta que su equipo reciba un punto en contra. </p>
                     </div>
                     <figure class="col-12 col-sm-11 mx-auto my-3">
-                        <object data="img/saque-1.svg" type="image/svg+xml" class="d-none d-md-block w-100"></object>
+                        <object data="img/saque-1.svg" type="image/svg+xml" class="w-100"></object>
                         <figcaption class="mx-3"><em>Saque por debajo</em>: Es un saque utilizado a nivel principiante, donde la pelota se golpea con la mano dominante, colocando el pie contrario un paso por delante. El golpe se puede realizar con la palma o puño.</figcaption>
                     </figure>
                     <figure class="col-12 col-sm-11 mx-auto my-3">
@@ -116,10 +116,10 @@
                         <h4 class="text-center mt-4 mb-3">PAISES AMERICANOS DESTACADOS</h4>
                     </div>
                     <figure class="col-12 col-sm-11 mx-auto my-3">
-                        <object data="img/medallas.svg" type="image/svg+xml" class="d-md-none w-100"></object>
+                        <object data="img/medallas.svg" type="image/svg+xml" class="w-100"></object>
                     </figure>
                     <figure class="col-12 col-sm-11 mx-auto my-3">
-                        <object data="img/simbologia.svg" type="image/svg+xml" class="d-md-none w-100"></object>
+                        <object data="img/simbologia.svg" type="image/svg+xml" class="w-100"></object>
                     </figure>
                 <div class="row">
                     <div class="col-11 col-sm-10 mx-auto">
