--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <article class="container" id="medallas">
                 <div class="row">
                     <div class="col-11 col-sm-10 mx-auto">
-                        <h4 class="text-center mt-4 mb-3">PAISES AMERICANOS DESTACADOS</h4>
+                        <h4 class="text-center mt-4 mb-3">EL MEDALLERO</h4>
                     </div>
                     <figure class="col-12 col-sm-11 mx-auto my-3">
                         <object data="img/medallas.svg" type="image/svg+xml" class="w-100"></object>
