--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </figure>
                 <div class="row">
                     <div class="col-11 col-sm-10 mx-auto">
-                        <p>Los tres medalleros históricos están actualizados hasta Lima 2019, año donde Argentina gana la medalla de oro, estableciendose como el 4to mejor país del mundo, y el podio continúan obteniendo Brasil, Cuba y Estados Unidos, gracias a la cantidad de medallas acumuladas a la fecha.</p>
+                        <p>Los tres medalleros históricos están actualizados hasta Lima 2019, año donde Argentina gana la medalla de oro, estableciéndose como el 4to mejor país del mundo, y el podio lo continúan obteniendo Brasil, Cuba y Estados Unidos, gracias a la cantidad de medallas acumuladas a la fecha.</p>
                    </div>
             <article>
         </main>
