--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <figcaption class="mx-3"><em>Saque por debajo</em>: Es un saque utilizado a nivel principiante, donde la pelota se golpea con la mano dominante, colocando el pie contrario un paso por delante. El golpe se puede realizar con la palma o puño.</figcaption>
                     </figure>
                     <figure class="col-12 col-sm-11 mx-auto my-3">
-                        <img src="img/saque-2.jpg" class="w-100" />
+                        <object data="img/saque-2.svg" type="image/svg+xml" class="w-100"></object>
                         <figcaption class="mx-3"><em>Saque por arriba</em>: Es un saque a nivel profesional, la pelota se eleva por sobre la cabeza, se realiza un salto y se golpea en el punto más alto con la palma abierta.</figcaption>
                     </figure>
                 </div>
